[package]
name = "bn254"
version = "0.1.0"
edition = "2021"
[dependencies]
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }

traits = { version = "0.1.0", path = "../traits" }
core = { version = "0.1.0", path = "../utils/core", package = "utils" }
rand-utils = { version = "0.1.0", path = "../utils/rand" }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
