[package]
name = "f128"
version = "0.1.0"
edition = "2021"

[dependencies]
traits = { version = "0.1.0", path = "../traits" }
core = { version = "0.1.0", path = "../utils/core", package = "utils" }
rand-utils = { version = "0.1.0", path = "../utils/rand" }
crypto_bigint = { git = "ssh://git@github.com/arithmic/crypto_bigint.git", branch = "main", features = [
    "generic-array",
    "zeroize",
] }
num-traits = "0.2.15"
rand = "0.8.5"

